--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,7 @@ pre.highlight code,
 }
 
 .panel-cover--overlay {
-	background-color: rgba(0, 32, 92, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(0, 32, 92, 0.6) 20%, rgba(0, 0, 0, 0.9));
-	background-image: linear-gradient(140deg,rgba(0, 32, 92, 0.6) 20%, rgba(0, 0, 0, 0.9)); 
+	background-color: rgba(132,114,72, 0.6);
+	background-image: -webkit-linear-gradient(-410deg, rgba(132,114,72, 0.6) 20%, rgba(0, 0, 0, 0.9));
+	background-image: linear-gradient(140deg,rgba(132,114,72, 0.6) 20%, rgba(0, 0, 0, 0.9)); 
 }
